docs: Add to README.md testing to include issue found on display on iphone 13 and fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -514,7 +514,7 @@ footer {
     
     }
 
-@media screen and  (max-width: 380px) {
+@media screen and  (max-width: 385px) {
 
     .website-logo {
         font-size: 1rem;
